@@ -181,6 +181,18 @@ void VehicleConfig::resetMixerVector(UAVDataObject* mixer, int channel)
     }
 }
 
+// Disable all servo/motor mixers (but keep camera and accessory ones)
+void VehicleConfig::resetMixers(UAVDataObject *mixer)
+{
+    for (int channel = 0; channel < (int)VehicleConfig::CHANNEL_NUMELEM; channel++) {
+        QString type = getMixerType(mixer, channel);
+        if ((type == "Disabled") || (type == "Motor") || (type == "Servo")) {
+            setMixerType(mixer, channel, VehicleConfig::MIXERTYPE_DISABLED);
+            resetMixerVector(mixer, channel);
+        }
+    }
+}
+
 double VehicleConfig::getMixerVectorValue(UAVDataObject* mixer, int channel, MixerVectorElem elementName)
 {
     Q_ASSERT(mixer);
